--- a/ShapeDemo/ShapeDemo/MainPage.xaml
+++ b/ShapeDemo/ShapeDemo/MainPage.xaml
@@ -1,21 +1,47 @@
-﻿<Page
-    x:Class="ShapeDemo.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ShapeDemo"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="ShapeDemo.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:ShapeDemo"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <Storyboard x:Name="ProgressStoryboard">
+            <!--<DoubleAnimation Duration="0:1:1"
+                             To="-500"
+                             Storyboard.TargetProperty="(Shape.StrokeDashOffset)"
+                             Storyboard.TargetName="triangle"
+                             d:IsOptimized="True" />-->
+            <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True"
+                                           Storyboard.TargetProperty="(Shape.StrokeDashOffset)"
+                                           Storyboard.TargetName="triangle">
+                <EasingDoubleKeyFrame KeyTime="0:1:0"
+                                      Value="-500" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <local:RingSegment  Height="100"
-                            Width="100"
-                            StartAngle="30"
-                            EndAngle="330"
-                            Radius="50"
-                            InnerRadius="30"
-                            Fill="#FFF179DC"
-                            Stroke="#FF00A5F1"
-                            StrokeThickness="2" />
+    <Grid Background="#FFCCCCCC">
+        <Grid Height="100"
+              HorizontalAlignment="Center">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="L"
+                               FontSize="55"
+                               Margin="0,0,5,4" />
+                    <local:Triangle x:Name="triangle"
+                                    Height="40"
+                                    Width="40"
+                                    StrokeThickness="2"
+                                    Stroke="RoyalBlue"
+                                    StrokeDashArray="4.045 4.045"
+                                    StrokeDashOffset="0.05"
+                                    StrokeDashCap="Round" />
+                    <TextBlock Text="ading..."
+                               FontSize="55"
+                               Margin="5,0,0,4" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Page>
