--- a/ShapeDemo/ShapeDemoSilverlight/EllipsePage.xaml
+++ b/ShapeDemo/ShapeDemoSilverlight/EllipsePage.xaml
@@ -1,12 +1,19 @@
 ﻿<UserControl x:Class="ShapeDemoSilverlight.EllipsePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
-    
-    <Grid x:Name="LayoutRoot" Background="White">
-        <Ellipse Height="37" Width="37" Stroke="DarkGreen" StrokeThickness="1"/>
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="400">
+
+    <Grid x:Name="LayoutRoot"
+          Background="White">
+        <Border BorderThickness="1"
+                BorderBrush="Red" Height="100" Width="100">
+            <Ellipse Stroke="DarkGreen"
+                     Height="100" Width="100"
+                     StrokeThickness="10" StrokeDashArray="28.2744 1000" Stretch="UniformToFill" />
+        </Border>
     </Grid>
 </UserControl>
