--- a/PointerDemo/PointerDemo/MainPage.xaml
+++ b/PointerDemo/PointerDemo/MainPage.xaml
@@ -1,12 +1,60 @@
 ﻿<UserControl x:Class="PointerDemo.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="400"
+             d:DesignWidth="400"
+             xmlns:local="clr-namespace:PointerDemo">
 
-    <Grid x:Name="LayoutRoot" Background="White">
-
+    <Grid x:Name="LayoutRoot"
+          Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="121*" />
+            <RowDefinition Height="29*" />
+        </Grid.RowDefinitions>
+        <local:LineArrow Background="Red"
+                         StrokeThickness="5"
+                         StartCorner="BottomLeft"
+                         BorderBrush="Green"
+                         Margin="50"
+                         Grid.RowSpan="2" />
+        <Path x:Name="ArrowElement"
+              Fill="Red"
+              HorizontalAlignment="Left"
+              VerticalAlignment="Bottom"
+              Height="50"
+              Width="50"
+              Stretch="Fill"
+              RenderTransformOrigin="0.5,0.5"
+              Grid.Row="1"
+              UseLayoutRounding="False">
+            <Path.RenderTransform>
+                <RotateTransform Angle="225" />
+            </Path.RenderTransform>
+            <Path.Data>
+                <PathGeometry>
+                    <PathFigure StartPoint="5,0">
+                        <LineSegment Point="10,10" />
+                        <LineSegment Point="0,10" />
+                    </PathFigure>
+                </PathGeometry>
+            </Path.Data>
+        </Path>
+        <!--<Path Stroke="RosyBrown"
+              StrokeThickness="10"
+              Height="50"
+              Width="90"
+              Stretch="Fill">
+            <Path.Data>
+                <PathGeometry>
+                    <PathFigure StartPoint="0,10">
+                        <LineSegment Point="20,50" />
+                        <LineSegment Point="100,0" />
+                    </PathFigure>
+                </PathGeometry>
+            </Path.Data>
+        </Path>-->
     </Grid>
 </UserControl>
