--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
@@ -3,10 +3,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="400">
+             mc:Ignorable="d"
+             xmlns:local="clr-namespace:ColorWheelDemoSilverlight"
+             d:DesignHeight="300" d:DesignWidth="400">
 
-    <Grid x:Name="LayoutRoot" Background="White">
-
+    <Grid x:Name="LayoutRoot"  Background="Black">
+        <Rectangle Height="100" Width="100" Fill="Red" HorizontalAlignment="Right"/>
+        <local:HsvWheel Height="50" Width="50"/>
+       
     </Grid>
 </UserControl>
+ 
