--- a/ShapeDemo/ShapeDemo2/BehaviorTestPage.xaml
+++ b/ShapeDemo/ShapeDemo2/BehaviorTestPage.xaml
@@ -1,17 +1,20 @@
-﻿<Page x:Class="ShapeDemo2.AttachedPropertyTestPage"
+﻿<Page x:Class="ShapeDemo2.BehaviorTestPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ShapeDemo2"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       mc:Ignorable="d">
+
 
     <UserControl.Resources>
         <Storyboard x:Name="Storyboard1">
             <DoubleAnimation Duration="0:0:5"
                              To="100"
-                             Storyboard.TargetProperty="(local:PathExtention.Progress)"
-                             Storyboard.TargetName="Triangle" />
+                             Storyboard.TargetProperty="Progress"
+                             Storyboard.TargetName="PathProgressBehavior" 
+                             EnableDependentAnimation="True"/>
         </Storyboard>
     </UserControl.Resources>
     <Grid x:Name="LayoutRoot"
@@ -25,9 +28,13 @@
                             Stroke="RoyalBlue"
                             StrokeDashOffset="00"
                             StrokeDashCap="Round">
+                <interactivity:Interaction.Behaviors>
+                    <local:PathProgressBehavior x:Name="PathProgressBehavior" />
+                </interactivity:Interaction.Behaviors>
                 
             </local:Triangle>
 
         </StackPanel>
     </Grid>
+
 </Page>
