--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
@@ -5,11 +5,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:ColorWheelDemoSilverlight"
-             d:DesignHeight="300" d:DesignWidth="400">
+             d:DesignHeight="600" d:DesignWidth="600">
 
-    <Grid x:Name="LayoutRoot"  Background="Black">
+    <Grid x:Name="LayoutRoot">
+        <!--<Grid.Effect>
+            <BlurEffect Radius="3"/>
+        </Grid.Effect>-->
         <Rectangle Height="100" Width="100" Fill="Red" HorizontalAlignment="Right"/>
-        <local:HsvWheel Height="50" Width="50"/>
+        <local:HsvWheel />
        
     </Grid>
 </UserControl>
