--- a/ShapeDemo/ShapeDemoSilverlight/MainPage.xaml
+++ b/ShapeDemo/ShapeDemoSilverlight/MainPage.xaml
@@ -1,15 +1,16 @@
-﻿<UserControl x:Class="ShapeDemoSilverlight.MainPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:ShapeDemoSilverlight"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+             x:Class="ShapeDemoSilverlight.MainPage"
              mc:Ignorable="d"
              d:DesignHeight="300"
-             d:DesignWidth="400"
-             xmlns:local="clr-namespace:ShapeDemoSilverlight">
+             d:DesignWidth="400">
     <UserControl.Resources>
-        <Storyboard x:Name="Storyboard1"
-                   >
+        <Storyboard x:Name="Storyboard1">
             <DoubleAnimation Duration="0:1:1"
                              To="-500"
                              Storyboard.TargetProperty="(Shape.StrokeDashOffset)"
@@ -20,12 +21,44 @@
 
     <Grid x:Name="LayoutRoot"
           Background="White">
-        <local:Triangle x:Name="triangle"
-                        Height="40"
-                        Width="40"
-                        StrokeThickness="2"
-                        Stroke="RoyalBlue" 
-                        StrokeDashArray="4.045 4.045" StrokeDashOffset="0.05"
-                        StrokeDashCap="Round" />
+        <StackPanel>
+            
+            <local:Triangle x:Name="triangle"
+                            Height="40"
+                            Width="40"
+                            StrokeThickness="2"
+                            Stroke="RoyalBlue"
+                            StrokeDashArray="4.045 4.045"
+                            StrokeDashOffset="0.05"
+                            StrokeDashCap="Round" />
+            <Rectangle Height="10" />
+            <Rectangle Stroke="Aquamarine"
+                       Height="50"
+                       Width="50"
+                       StrokeThickness="5" />
+            <StackPanel Orientation="Horizontal">
+                <Grid Height="50"
+                      Width="50">
+                    <local:Triangle Stretch="Fill"
+                                    Height="40"
+                                    Width="40"
+                                    StrokeThickness="2"
+                                    Stroke="RoyalBlue"
+                                    StrokeDashArray="4.045 4.045"
+                                    StrokeDashOffset="0.05"
+                                    StrokeDashCap="Round" />
+                </Grid>
+                <Grid Height="50"
+                      Width="50"
+                      Margin="10,0,0,0">
+                    <local:Triangle Stroke="Aquamarine"
+                                    StrokeThickness="5"
+                                    StrokeDashArray="10 10"
+                                    StrokeDashOffset="26"
+                                    Stretch="None" />
+                </Grid>
+
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
