--- a/ShapeDemo/ShapeDemo/ButtonPage.xaml
+++ b/ShapeDemo/ShapeDemo/ButtonPage.xaml
@@ -4,6 +4,7 @@
       xmlns:local="using:ShapeDemo"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       mc:Ignorable="d">
     <Page.Resources>
         <Style x:Key="ButtonStyle1"
@@ -45,7 +46,7 @@
                                     </VisualState>
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
-                                           
+
                                             <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
                                         </Storyboard>
                                     </VisualState>
@@ -104,6 +105,115 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+
+        <Style x:Key="EllipseStyle"
+               TargetType="Button">
+            <Setter Property="Background"
+                    Value="{ThemeResource ButtonBackground}" />
+            <Setter Property="Foreground"
+                    Value="{ThemeResource ButtonForeground}" />
+            <Setter Property="BorderBrush"
+                    Value="{ThemeResource ButtonBorderBrush}" />
+            <Setter Property="BorderThickness"
+                    Value="{ThemeResource ButtonBorderThemeThickness}" />
+            <Setter Property="Padding"
+                    Value="8,4,8,4" />
+            <Setter Property="HorizontalAlignment"
+                    Value="Left" />
+            <Setter Property="VerticalAlignment"
+                    Value="Center" />
+            <Setter Property="FontFamily"
+                    Value="{ThemeResource ContentControlThemeFontFamily}" />
+            <Setter Property="FontWeight"
+                    Value="Normal" />
+            <Setter Property="FontSize"
+                    Value="{ThemeResource ControlContentThemeFontSize}" />
+            <Setter Property="UseSystemFocusVisuals"
+                    Value="True" />
+            <Setter Property="FocusVisualMargin"
+                    Value="-3" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid x:Name="RootGrid">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualStateGroup.Transitions>
+                                        <VisualTransition GeneratedDuration="0:0:1"
+                                                          To="Normal">
+                                            <Storyboard>
+                                                <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True"
+                                                                               Storyboard.TargetProperty="(local:EllipseProgressBehavior.Progress)"
+                                                                               Storyboard.TargetName="EllipseProgressBehavior">
+                                                    <EasingDoubleKeyFrame KeyTime="0:0:1"
+                                                                          Value="0">
+                                                        <EasingDoubleKeyFrame.EasingFunction>
+                                                            <QuinticEase EasingMode="EaseOut" />
+                                                        </EasingDoubleKeyFrame.EasingFunction>
+                                                    </EasingDoubleKeyFrame>
+                                                </DoubleAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualTransition>
+                                        <VisualTransition GeneratedDuration="0:0:1"
+                                                          To="PointerOver">
+                                            <Storyboard>
+                                                <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True"
+                                                                               Storyboard.TargetProperty="(local:EllipseProgressBehavior.Progress)"
+                                                                               Storyboard.TargetName="EllipseProgressBehavior">
+                                                    <EasingDoubleKeyFrame KeyTime="0:0:1"
+                                                                          Value="100">
+                                                        <EasingDoubleKeyFrame.EasingFunction>
+                                                            <QuinticEase EasingMode="EaseOut" />
+                                                        </EasingDoubleKeyFrame.EasingFunction>
+                                                    </EasingDoubleKeyFrame>
+                                                </DoubleAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualTransition>
+                                    </VisualStateGroup.Transitions>
+                                    <VisualState x:Name="Normal">
+                                        <Storyboard>
+                                            <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="PointerOver">
+                                        <Storyboard>
+                                            <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+                                        </Storyboard>
+                                        <VisualState.Setters>
+                                            <Setter Target="EllipseProgressBehavior.(local:EllipseProgressBehavior.Progress)"
+                                                    Value="100" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="Pressed">
+                                        <Storyboard>
+                                            <PointerDownThemeAnimation Storyboard.TargetName="RootGrid" />
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Disabled" />
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <ContentPresenter x:Name="ContentPresenter"
+                                              AutomationProperties.AccessibilityView="Raw"
+                                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                                              ContentTransitions="{TemplateBinding ContentTransitions}"
+                                              Content="{TemplateBinding Content}"
+                                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              Padding="{TemplateBinding Padding}"
+                                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+                            <Ellipse Fill="Transparent"
+                                     Stroke="{TemplateBinding BorderBrush}"
+                                     StrokeThickness="2">
+                                <interactivity:Interaction.Behaviors>
+                                    <local:ChangeAngleToEnterPointerBehavior />
+                                    <local:EllipseProgressBehavior x:Name="EllipseProgressBehavior" />
+                                </interactivity:Interaction.Behaviors>
+                            </Ellipse>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -111,7 +221,7 @@
                 Width="100"
                 Content="Button"
                 BorderBrush="LightSeaGreen"
-                Style="{StaticResource ButtonStyle1}"
+                Style="{StaticResource EllipseStyle}"
                 HorizontalAlignment="Center" />
     </Grid>
 </Page>
