--- a/ShapeDemo/ShapeDemo/Themes/Generic.xaml
+++ b/ShapeDemo/ShapeDemo/Themes/Generic.xaml
@@ -1,27 +1,22 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:ShapeDemo">
+                    xmlns:local="using:ShapeDemo"
+                    xmlns:interactivity="using:Microsoft.Xaml.Interactivity">
 
     <Style TargetType="local:ButtonChrome">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:ButtonChrome">
                     <Border>
-                        <Border.Resources>
-                            <local:ProgressWrapper x:Name="ProgressWrapper" />
-                            <local:EllipseStrokeDashArrayConverter x:Name="EllipseStrokeDashArrayConverter"
-                                                                   TargetEllipse="{Binding ElementName=PointerOverElement}" />
-                        </Border.Resources>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualStateGroup.Transitions>
-
                                     <VisualTransition GeneratedDuration="0:0:1"
                                                       To="Normal">
                                         <Storyboard>
                                             <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True"
-                                                                           Storyboard.TargetProperty="(local:ProgressWrapper.Progress)"
-                                                                           Storyboard.TargetName="ProgressWrapper">
+                                                                           Storyboard.TargetProperty="(local:EllipseProgressBehavior.Progress)"
+                                                                           Storyboard.TargetName="EllipseProgressBehavior">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:1"
                                                                       Value="0">
                                                     <EasingDoubleKeyFrame.EasingFunction>
@@ -35,8 +30,8 @@
                                                       To="PointerOver">
                                         <Storyboard>
                                             <DoubleAnimationUsingKeyFrames EnableDependentAnimation="True"
-                                                                           Storyboard.TargetProperty="(local:ProgressWrapper.Progress)"
-                                                                           Storyboard.TargetName="ProgressWrapper">
+                                                                           Storyboard.TargetProperty="(local:EllipseProgressBehavior.Progress)"
+                                                                           Storyboard.TargetName="EllipseProgressBehavior">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:1"
                                                                       Value="100">
                                                     <EasingDoubleKeyFrame.EasingFunction>
@@ -50,32 +45,24 @@
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="ProgressWrapper.(local:ProgressWrapper.Progress)"
+                                        <Setter Target="EllipseProgressBehavior.(local:EllipseProgressBehavior.Progress)"
                                                 Value="100" />
-                                      </VisualState.Setters>
-                                    <!--<Storyboard>
-                                        <DoubleAnimation Duration="0"
-                                                         To="100"
-                                                         Storyboard.TargetProperty="(local:ProgressWrapper.Progress)"
-                                                         Storyboard.TargetName="ProgressWrapper" />
-                                    </Storyboard>-->
+                                    </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-                        <Grid x:Name="grid"
-                              Height="100">
-                           
-                            <Ellipse x:Name="PointerOverElement"
-                                     Fill="Transparent"
-                                     Stroke="{TemplateBinding BorderBrush}"
-                                     StrokeThickness="2"
-                                     StrokeDashArray="{Binding Source={StaticResource ProgressWrapper} ,Path=Progress, Converter={StaticResource EllipseStrokeDashArrayConverter}}"
-                                     RenderTransformOrigin="0.5,0.5">
-                                <Ellipse.RenderTransform>
-                                    <RotateTransform />
-                                </Ellipse.RenderTransform>
-                            </Ellipse>
-                        </Grid>
+                        <Ellipse x:Name="PointerOverElement"
+                                 Fill="Transparent"
+                                 Stroke="{TemplateBinding BorderBrush}"
+                                 StrokeThickness="2"
+                                 RenderTransformOrigin="0.5,0.5">
+                            <Ellipse.RenderTransform>
+                                <RotateTransform />
+                            </Ellipse.RenderTransform>
+                            <interactivity:Interaction.Behaviors>
+                                <local:EllipseProgressBehavior x:Name="EllipseProgressBehavior" />
+                            </interactivity:Interaction.Behaviors>
+                        </Ellipse>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
