--- a/ShapeDemo/ShapeDemo/MainPage.xaml
+++ b/ShapeDemo/ShapeDemo/MainPage.xaml
@@ -16,10 +16,11 @@
         </Storyboard>
     </Page.Resources>
     <Grid Background="#FFCCCCCC">
-        <Grid Height="100"
-              HorizontalAlignment="Center">
-            <StackPanel>
-                <StackPanel Orientation="Horizontal">
+        <Viewbox Height="200">
+            <Grid Height="100"
+                  HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal"
+                            VerticalAlignment="Center">
                     <TextBlock Text="L"
                                FontSize="55"
                                Margin="0,0,5,4" />
@@ -35,7 +36,7 @@
                                FontSize="55"
                                Margin="5,0,0,4" />
                 </StackPanel>
-            </StackPanel>
-        </Grid>
+            </Grid>
+        </Viewbox>
     </Grid>
 </Page>
