--- a/ShapeDemo/ShapeDemo2/MainPage.xaml
+++ b/ShapeDemo/ShapeDemo2/MainPage.xaml
@@ -1,12 +1,21 @@
-﻿<Page
-    x:Class="ShapeDemo2.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ShapeDemo2"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="ShapeDemo2.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:ShapeDemo2"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+    <Page.Resources>
 
+        <Storyboard x:Name="Storyboard1">
+            <DoubleAnimation Duration="0:1:0"
+                             To="15000"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)"
+                             Storyboard.TargetName="ellipse"
+                             d:IsOptimized="True" />
+        </Storyboard>
+
+    </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Pivot Title="Pivot">
             <!--<PivotItem Header="Point Test">
@@ -24,12 +33,25 @@
                     <local:AttachedPropertyTestPage />
                 </Grid>
             </PivotItem>-->
-            <PivotItem Header="Behavior">
+            <!--<PivotItem Header="Behavior">
                 <Grid>
                     <local:BehaviorTestPage />
                 </Grid>
-            </PivotItem>
-        </Pivot>
+            </PivotItem>-->
 
+        </Pivot>
+        <local:Triangle x:Name="ellipse"
+                 Stroke="SlateGray"
+                 StrokeThickness="5"
+                 Height="90"
+                 Width="100"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 StrokeDashArray="2,2"
+                 RenderTransformOrigin="0.5,0.5">
+            <local:Triangle.RenderTransform>
+                <CompositeTransform />
+            </local:Triangle.RenderTransform>
+        </local:Triangle>
     </Grid>
 </Page>
