--- a/ShapeDemo/SvgDemo/MainPage.xaml
+++ b/ShapeDemo/SvgDemo/MainPage.xaml
@@ -8,9 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image>
+        <Image Height="150" Width="150">
             <Image.Source>
-                <SvgImageSource UriSource="path2.svg" />
+                <SvgImageSource UriSource="feoffset_1.svg" />
             </Image.Source>
         </Image>
         
